# ocaml-temporal

./: .dockerignore  .gitattributes  .gitignore  .ocamlformat  AGENTS.md  Dockerfile.dev  LICENSE  Makefile  README.md  compose.yaml  deny.toml  dune-project  dune-workspace  temporal-sdk.opam  temporal-sdk.opam.locked  temporal.opam  temporal.opam.locked
.github/: dependabot.yml
docs/: README.md  dependencies.md  implementation-roadmap.md  progress.md
examples/: README.md
lib/core_bridge/: dune  native_bridge.ml  native_bridge.mli  native_stubs.c
lib/public/: activity.ml  activity.mli  activity_private.ml  backend.ml  backend.mli  child_workflow.ml  child_workflow.mli  client.ml  client.mli  codec.ml  codec.mli  codec_private.ml  condition.ml  condition.mli  dune  duration.ml  duration.mli  error.ml  error.mli  error_private.ml  future.ml  future.mli  future_private.ml  interaction.ml  interaction.mli  native_worker.ml  native_worker.mli  payload.ml  payload.mli  payload_private.ml  priority.ml  priority.mli  query.ml  query.mli  result_syntax.ml  result_syntax.mli  retry_policy_private.ml  runtime_info.ml  runtime_info.mli  scope.ml  (+15 more)
rust/: Cargo.toml  rust-toolchain.toml
rust/core-bridge/: Cargo.toml
rust/core-bridge/include/: ocaml_temporal_core.h
rust/core-bridge/src/: abi.rs  activity_protocol.rs  client_protocol.rs  lib.rs  protocol.rs  replay_bridge.rs  worker_bridge.rs  workflow_protocol.rs
rust/core-bridge/tests/: abi.rs  activity_protocol.rs  client_bridge.rs  lifecycle.rs  protocol.rs  replay_abi.rs  revision.rs  runtime_cleanup.rs  runtime_cleanup_idempotence.rs  task_ledger.rs  workflow_protocol.rs  workflow_retry_policy.rs
rust/core-bridge/tests/support/: abi_rejection.rs  pending_start_cleanup.rs  pending_start_transitions.rs  replay_bridge.rs  replay_fixture.rs
scripts/: build-rust-bridge.sh  (+8 more)
test/bridge/: abi_harness.c  dune  test_abi.sh  test_failure_diagnostic.ml  test_install.sh  test_ocaml_activity_protocol.ml  test_ocaml_bridge.ml  test_ocaml_client_protocol.ml  test_ocaml_client_update_protocol.ml  test_ocaml_protocol.ml  test_ocaml_response_buffers.ml  test_ocaml_runtime_lifetime.ml  test_ocaml_workflow_protocol.ml
test/bridge/fixtures/protocol/invalid/: duplicate-body.json  duplicate-envelope.json  error-unknown-field.json  integer-out-of-range.json  invalid-correlation.json  missing-field.json  non-integral-number.json  payload-invalid-base64.json  payload-unknown-field.json  unknown-field.json  unknown-kind.json  wrong-type.json
test/bridge/fixtures/protocol/valid/: error.input.json  error.normalized.json  payload.input.json  payload.normalized.json  request.input.json  request.normalized.json  response.input.json  response.normalized.json  unicode.input.json  unicode.normalized.json
test/bridge/fixtures/workflow-protocol/invalid/: activation-child-failure-empty-run-id-after-start.json  activation-child-failure-empty-workflow-id.json  activation-child-failure-negative-event-id.json  activation-child-start-empty-run-id.json  activation-child-start-invalid-cause.json  activation-child-start-missing-run-id.json  activation-child-terminal-missing-failure-info.json  activation-child-terminal-missing-payload.json  activation-child-unknown-terminal-kind.json  activation-duplicate-field.json  activation-eviction-mixed.json  activation-invalid-base64.json  activation-missing-field.json  activation-seq-negative.json  activation-seq-too-large.json  activation-unknown-job.json  completion-duplicate-field.json  completion-invalid-duration.json  completion-no-activity-timeout.json  completion-terminal-not-last.json  completion-unknown-command.json  completion-unknown-nested.json
test/bridge/fixtures/workflow-protocol/valid/: activation.input.json  activation.normalized.json  child-cancellation-before-start.input.json  child-cancellation-before-start.normalized.json  child-initialize.input.json  child-initialize.normalized.json  child-resolution.input.json  child-resolution.normalized.json  completion.input.json  completion.normalized.json  eviction.input.json  eviction.normalized.json  patch-activation.input.json  patch-activation.normalized.json  patch-completion.input.json  patch-completion.normalized.json  realistic-initialize.input.json  realistic-initialize.normalized.json
test/integration/temporal/driver/: cache_eviction_driver.ml  dune  parent_child_restart_driver.ml  restart_driver.ml  smoke_driver.ml
test/integration/temporal/patch_replay/: deprecated_worker.ml  dune  legacy_definition.ml  legacy_worker.ml  patch_replay_driver.ml  patch_replay_support.ml  patched_definition.ml  patched_worker.ml  removed_worker.ml
test/integration/temporal/worker/: cache_eviction_worker.ml  dune  parent_child_restart_worker.ml  smoke_worker.ml
test/runtime/: dune  test_activation.ml  test_activity_retry_policy.ml  test_condition.ml  test_external_workflow.ml  test_native_activity_execution.ml  test_native_activity_lifecycle.ml  test_native_async_activity.ml  test_native_execution.ml  test_native_worker_execution.ml  test_native_worker_lifecycle.ml  test_native_worker_loop.ml  test_native_worker_policy.ml  test_scheduler.ml  test_scope.ml  test_scope_server_cancel.ml  test_workflow_role_checkpoint.ml  test_workflow_time.ml
test/smoke/: dune  source_contract_helpers.sh  test_cargo_license_policy.sh  test_cargo_sbom_contract.sh  test_license_policy.sh  test_quality_contract.sh  test_release_preflight_contract.sh  test_release_tag_contract.sh  test_repository.ml  test_rust_link_flags.sh  test_rust_toolchain.sh  test_source_contract_helpers.sh  test_temporal_activity_timeout_contract.sh  test_temporal_child_retry_contract.sh  test_temporal_child_start_failure_contract.sh  test_temporal_compose_config.sh  test_temporal_heartbeat_contract.sh  test_temporal_heartbeat_timeout_contract.sh  test_temporal_long_backoff_retry_contract.sh  test_temporal_non_retryable_activity_contract.sh  test_temporal_worker_cache_eviction_contract.sh  test_temporal_worker_crash_recovery_contract.sh  test_worker_readiness_contract.sh  test_worker_stop_contract.sh
(+274 files in other folders)
