(lang dune 3.18)
(name temporal-sdk)
(generate_opam_files false)
(source (github mfow/ocaml-temporal))
(license Apache-2.0)
(authors "Michael Fowlie")
(maintainers "Michael Fowlie")
(maintenance_intent "(latest)")

(package
 (name temporal-sdk)
 (synopsis "Experimental Temporal workflows in modern OCaml")
 (description "An experimental typed OCaml 5 workflow SDK backed by Temporal Core")
 (tags (temporal workflow sdk experimental))
 (depends
  (ocaml (>= 5.2))
  (dune (>= 3.18))))
