opam-version: "2.0"
synopsis: "Experimental Temporal workflows in modern OCaml"
description: "An experimental typed OCaml 5 workflow SDK backed by Temporal Core"
maintainer: "Michael Fowlie"
authors: "Michael Fowlie"
license: "Apache-2.0"
tags: [ "temporal" "workflow" "sdk" "experimental" ]
x-maintenance-intent: [ "(latest)" ]
homepage: "https://github.com/mfow/ocaml-temporal"
bug-reports: "https://github.com/mfow/ocaml-temporal/issues"
dev-repo: "git+https://github.com/mfow/ocaml-temporal.git"
depends: [
  "ocaml" {>= "5.2"}
  "dune" {>= "3.18"}
  "logs" {>= "0.10"}
  "yojson" {>= "3.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [["dune" "runtest" "-p" name "-j" jobs]]
