(rule
 (targets
  libocaml_temporal_core_bridge.a
  dllocaml_temporal_core_bridge%{ext_dll}
  rust_static_link_flags.sexp)
 (deps
  (source_tree ../../rust)
  ../../scripts/build-rust-bridge.sh
  ../../scripts/copy-rust-bridge-artifacts.sh
  ../../scripts/render-rust-link-flags.sh)
 (action
  (run
   sh
   %{workspace_root}/scripts/build-rust-bridge.sh
   %{workspace_root}
   %{targets})))

(foreign_library
 (archive_name temporal_native_stubs)
 (language c)
 (names native_stubs)
 (include_dirs ../../rust/core-bridge/include)
 (flags :standard -Wall -Wextra -Werror))

(library
 (name temporal_core_bridge)
 (public_name temporal-sdk.internal_core_bridge)
 (no_dynlink)
 (modules native_bridge)
 (libraries temporal-sdk.internal_base yojson)
 (foreign_archives temporal_native_stubs ocaml_temporal_core_bridge)
 (c_library_flags
  (:include rust_static_link_flags.sexp)))
