(rule
 (targets
  libocaml_temporal_core_bridge.a
  dllocaml_temporal_core_bridge%{ext_dll}
  rust_static_link_flags.sexp)
 (deps
  (source_tree ../../rust)
  ../../scripts/build-rust-bridge.sh
  ../../scripts/copy-rust-bridge-artifacts.sh
  ../../scripts/render-rust-link-flags.sh)
 (action
  ;; Dune's [source_tree] input is copied read-only into the action sandbox.
  ;; Cargo's target directory is mutable, so advertise a writable sibling as a
  ;; fallback for the bridge script. An explicitly configured
  ;; [CARGO_TARGET_DIR] remains authoritative; this fallback must not make the
  ;; Docker or native Makefile workflows build the Rust graph twice.
  (setenv
   OCAML_TEMPORAL_RUST_TARGET_FALLBACK
   %{workspace_root}/rust-target
   (run
    sh
    %{workspace_root}/scripts/build-rust-bridge.sh
    %{workspace_root}
    %{targets}))))

(foreign_library
 (archive_name temporal_native_stubs)
 (language c)
 (names native_stubs)
 (include_dirs ../../rust/core-bridge/include)
 (flags :standard -Wall -Wextra -Werror))

(library
 (name temporal_core_bridge)
 (package temporal-sdk)
 (no_dynlink)
 (modules native_bridge)
 (libraries temporal_base temporal_protocol yojson)
 (foreign_archives temporal_native_stubs ocaml_temporal_core_bridge)
 (c_library_flags
  (:include rust_static_link_flags.sexp)))
