(library
 (name temporal)
 (public_name temporal-sdk)
 (private_modules
  activity_private
  backend
  codec_private
  error_private
  future_private
  native_worker
  payload_private
  workflow_private)
 (libraries
  temporal_base
  temporal_core_bridge
  temporal_future_kernel
  temporal_protocol
  temporal_runtime
  temporal_sdk_supervisor
  threads))
