[package]
name = "ocaml-temporal-core-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
prost-wkt-types.workspace = true
temporalio-sdk-core.workspace = true
temporalio-protos.workspace = true
