(tests
 (names
  test_activation
  test_native_execution
  test_native_activity_execution
  test_native_async_activity
  test_native_activity_lifecycle
  test_native_worker_loop
  test_native_worker_policy
  test_native_worker_lifecycle
  test_native_worker_execution
  test_scheduler
  test_activity_retry_policy
  test_scope
  test_workflow_time
  test_condition)
 (libraries temporal-sdk temporal_runtime))
