(test
 (name test_repository)
 (deps
  ../../LICENSE
  ../../dune-workspace
  ../../dune-project
  ../../lib/core_bridge/dune
  ../../temporal-sdk.opam
  ../../temporal-sdk.opam.locked)
 (action
  (setenv
   TEMPORAL_SOURCE_ROOT
   %{workspace_root}
   (run %{test}))))

(rule
 (alias runtest)
 (deps
  ../../scripts/render-rust-link-flags.sh
  test_rust_link_flags.sh)
 (action
  (run sh %{dep:test_rust_link_flags.sh} %{workspace_root})))
