(test
 (name test_repository)
 (deps
  ../../LICENSE
  ../../Makefile
  ../../deny.toml
  ../../dune-workspace
  ../../dune-project
  ../../lib/base/dune
  ../../lib/core_bridge/dune
  ../../lib/future_kernel/dune
  ../../lib/mailbox_processor/dune
  ../../lib/mailbox_processor/mailbox_processor.mli
  ../../lib/protocol/dune
  ../../lib/runtime/dune
  ../../lib/sdk_supervisor/dune
  ../../lib/sdk_supervisor/sdk_supervisor.mli
  ../../scripts/build-rust-bridge.sh
  ../bridge/dune
  ../../temporal-sdk.opam
  ../../temporal-sdk.opam.locked)
 (action
  (setenv
   TEMPORAL_SOURCE_ROOT
   %{workspace_root}
   (run %{test}))))

(rule
 (alias runtest)
 (deps ../../scripts/render-rust-link-flags.sh test_rust_link_flags.sh)
 (action
  (run sh %{dep:test_rust_link_flags.sh} %{workspace_root})))

(rule
 (alias runtest)
 (deps
  test_temporal_heartbeat_contract.sh
  ../integration/temporal/common/smoke_definitions.ml
  ../integration/temporal/driver/smoke_driver.ml
  ../integration/temporal/worker/smoke_worker.ml)
 (action
  (run sh %{dep:test_temporal_heartbeat_contract.sh} %{workspace_root})))

(rule
 (alias runtest)
 (deps
  test_temporal_activity_timeout_contract.sh
  ../integration/temporal/common/smoke_definitions.ml
  ../integration/temporal/driver/smoke_driver.ml
  ../integration/temporal/worker/smoke_worker.ml)
 (action
  (run sh %{dep:test_temporal_activity_timeout_contract.sh} %{workspace_root})))

(rule
 (alias runtest)
 (deps
  test_temporal_long_backoff_retry_contract.sh
  ../integration/temporal/common/smoke_definitions.ml
  ../integration/temporal/driver/smoke_driver.ml
  ../integration/temporal/worker/smoke_worker.ml)
 (action
  (run sh %{dep:test_temporal_long_backoff_retry_contract.sh} %{workspace_root})))

(rule
 (alias runtest)
 (deps
  test_temporal_heartbeat_timeout_contract.sh
  ../integration/temporal/common/smoke_definitions.ml
  ../integration/temporal/driver/smoke_driver.ml
  ../integration/temporal/worker/smoke_worker.ml)
 (action
  (run sh %{dep:test_temporal_heartbeat_timeout_contract.sh} %{workspace_root})))

(rule
 (alias runtest)
 (deps
  test_temporal_non_retryable_activity_contract.sh
  ../integration/temporal/common/smoke_definitions.ml
  ../integration/temporal/driver/smoke_driver.ml
  ../integration/temporal/worker/smoke_worker.ml)
 (action
  (run sh %{dep:test_temporal_non_retryable_activity_contract.sh} %{workspace_root})))

(rule
 (alias runtest)
 (deps
  test_temporal_child_retry_contract.sh
  ../integration/temporal/common/smoke_definitions.ml
  ../integration/temporal/driver/smoke_driver.ml
  ../integration/temporal/worker/smoke_worker.ml)
 (action
  (run sh %{dep:test_temporal_child_retry_contract.sh} %{workspace_root})))

(rule
 (alias runtest)
 (deps
  test_temporal_child_start_failure_contract.sh
  ../integration/temporal/common/smoke_definitions.ml
  ../integration/temporal/driver/smoke_driver.ml
  ../integration/temporal/worker/smoke_worker.ml)
 (action
  (run sh %{dep:test_temporal_child_start_failure_contract.sh} %{workspace_root})))
