; Private fixture executables for the live workflow-patch lifecycle replay
; acceptance. The source definitions are separate compilation units: the
; legacy and removed executables do not link the unit containing the active
; Temporal.Workflow.patched call.

(library
 (name temporal_patch_replay_support)
 (wrapped false)
 (modules patch_replay_support)
 (libraries temporal-sdk unix))

(executable
 (name legacy_worker)
 (modules legacy_definition legacy_worker)
 (libraries temporal-sdk temporal_patch_replay_support unix))

(executable
 (name patched_worker)
 (modules patched_definition patched_worker)
 (libraries temporal-sdk temporal_patch_replay_support unix))

(executable
 (name deprecated_worker)
 (modules deprecated_worker)
 (libraries temporal-sdk temporal_patch_replay_support unix))

(executable
 (name removed_worker)
 (modules removed_worker)
 (libraries temporal-sdk temporal_patch_replay_support unix))

(executable
 (name patch_replay_driver)
 (modules patch_replay_driver)
 (libraries temporal-sdk temporal_patch_replay_support unix))
